# agentbar

./: .gitignore  README.md  pyproject.toml
agentbar/: __init__.py  browser.py  cli.py  config.py  menu_spec.py  menubar.py  models.py  panel_window.py  processes.py  quota.py  scheduler.py  server.py  store.py  transcript.py  tunnel.py  usage.py
agentbar/adapters/: __init__.py  base.py  claude.py  codex.py  fake.py
agentbar/testing/: fake_cli.py
agentbar/web/: index.html  mobile.html
packaging/: AgentBar.py  py2app_setup.py
scripts/: agentbar-restart.sh  build-dmg.sh  install-launch-agent.sh  uninstall-launch-agent.sh
tests/: conftest.py  test_adapters_argv.py  test_browser.py  test_classify.py  test_menu_spec.py  test_menubar.py  test_models_store.py  test_processes.py  test_quota_monitor.py  test_scheduler.py  test_server.py  test_transcript_recover.py  test_tunnel.py  test_usage.py
