[project]
name = "agentbar"
version = "0.1.0"
description = "macOS menu bar scheduler for AI CLI agents (Claude Code, Codex, ...)"
requires-python = ">=3.11"
dependencies = [
    "rumps>=0.4.0",
]

[project.scripts]
agentbar = "agentbar.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentbar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
