[project]
name = "agentbar"
version = "0.4.0"
description = "macOS menu bar scheduler for AI CLI agents (Claude Code, Codex, ...)"
requires-python = ">=3.11"
dependencies = [
    # 原生 AppKit 菜单栏（NSStatusItem/NSMenu）。rumps 已移除：其定时重建
    # 打开中菜单 + 主线程阻塞模式在 macOS 26 上造成菜单卡死/点击失效。
    "pyobjc-framework-Cocoa>=11.0; sys_platform == 'darwin'",
    # Claude Code OAuth 凭据存于 macOS 登录 Keychain，需要 Security 框架。
    "pyobjc-framework-Security>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-webkit>=12.2.1",
]

[project.scripts]
agentbar = "agentbar.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentbar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
